use contextmenu.less from thirdparty

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -59,7 +59,7 @@ pre {
   font-size: (@font-size-base + 5);
 }
 
-@import "contextmenu.less";
+@import "../thirdparty/ng-contextmenu/contextmenu.less";
 
 // link animate.css with angular
 .blocked-info.ng-hide {
