minor layout improvments

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -26,12 +26,21 @@ body { padding-top: 125px; }
   top: 61px;
   background-color: @gray-lighter;
 
+  > .container {
+    padding: 0 10px;
+  }
+
   .navbar-right li {
     margin-left: 5px;
   }
   .navbar-left li {
     margin-right: 5px;
   }
+}
+
+.h2-box {
+  margin-top: 20px;
+  margin-bottom: 0;
 }
 
 // [ng-hide] {
