--- a/app/partials/domain.html
+++ b/app/partials/domain.html
@@ -1,6 +1,6 @@
 <!-- sub nav -->
 <nav class="navbar navbar-default navbar-fixed-top subnavbar" role="navigation">
-  <div class="container" style="padding: 0 15px;">
+  <div class="container">
 
     <ul class="nav navbar-nav navbar-left">
       <li>
