--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -42,7 +42,10 @@
      
       <div class="form-group">
         <div class="col-lg-5 col-lg-offset-4">
-          <button type="submit" class="btn btn-primary">Login</button>
+          <button type="submit" class="btn btn-primary">
+            <span class="fa fa-sign-in" />
+            Login
+          </button>
         </div>
       </div>
     </fieldset>
