add btn-toggle directive

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -68,6 +68,10 @@ pre {
   font-size: (@font-size-base + 5);
 }
 
+.btn-toggle, .btn-toggle:focus {
+  outline: 0;
+}
+
 @import "../thirdparty/ng-contextmenu/contextmenu.less";
 
 // link animate.css with angular
