work on address module partials

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -43,6 +43,10 @@ body { padding-top: 125px; }
   margin-bottom: 0;
 }
 
+.margin-bottom-sm {
+  margin-bottom: 0.5em;
+}
+
 // [ng-hide] {
 //   display: none;
 // }
@@ -65,7 +69,7 @@ a.glyph-link .glyphicon {
 }
 
 pre {
-  font-size: (@font-size-base + 5);
+  font-size: (@font-size-base + 3);
 }
 
 .btn-toggle, .btn-toggle:focus {
