--- a/app/partials/address/list.html
+++ b/app/partials/address/list.html
@@ -35,9 +35,30 @@
   <div class="col-md-6 col-sm-12">
     <div class="form-group h2-box">
       <div class="input-group">
+        <div class="input-group-addon">
+          
+          <div class="dropdown">
+            <span class="fa fa-filter dropdown-toggle" data-toggle="dropdown" />
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+              <li role="presentation">
+                <a ng-click="filter.add('source')" role="menuitem" tabindex="-1" href>
+                  Add source filter
+                </a>
+              </li>
+              <li role="presentation">
+                <a ng-click="filter.add('destination')" role="menuitem" tabindex="-1" href>
+                  Add destination filter
+                </a>
+              </li>
+            </ul>
+          </div>
+
+        </div>
         <div class="search-with-tags">
           <div class="tags">
-            <!-- <span class="label label-info">Tag</span> -->
+            <a class="label label-info" ng-repeat="(filter, values) in meta.filter">
+              &times; {{ filter }}: {{ values.join(', ') }}
+            </a>
           </div>
           <div class="search">
             <input 
@@ -47,6 +68,8 @@
               ng-model="meta.search"
               ng-change="search( meta.search )"
               autofocus="autofocus"
+              set-focus="filter.focusSerch"
+              on-space="filter.check"
             >
           </div>
         </div>
@@ -85,8 +108,12 @@
 <!-- table -->
 <table class="table table-striped table-bordered" contextmenu-container="meta.contextmenu">
   <tr>
-    <th>Source</th>
-    <th>Destination</th>
+    <th>
+      Source
+    </th>
+    <th>
+      Destination
+    </th>
   </tr>
 
   <tr ng-repeat="row in list" contextmenu-item="row">
