--- a/app/less/style.less
+++ b/app/less/style.less
@@ -15,6 +15,7 @@
 @import "bootstrap.less";
 
 @import "../thirdparty/animate.css/animate.less";
+@import "../thirdparty/ladda-bootstrap/dist/ladda-themeless.css.less";
 
 body { padding-top: 125px; }
 
