--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -12,7 +12,7 @@
     data-ng-submit="submit( login )"
   >
     <fieldset>
-      <legend>Anmeldung</legend>
+      <legend>Login</legend>
       <div class="form-group">
         <!-- Username -->
         <label class="control-label col-lg-4" for="username">Email-Adresse</label>
@@ -42,7 +42,12 @@
      
       <div class="form-group">
         <div class="col-lg-5 col-lg-offset-4">
-          <button type="submit" class="btn btn-primary">
+          <button
+            type="button"
+            ng-click="submit( login )"
+            class="btn btn-primary"
+            ladda-button="meta.isLoading"
+          >
             <span class="fa fa-sign-in" />
             Login
           </button>
