--- a/app/less/style.less
+++ b/app/less/style.less
@@ -1,3 +1,8 @@
 @import "./bootstrap.less";
+@import "./flatui-pro.less";
 
-@import (inline) "../../node_modules/bootstrap/docs/examples/jumbotron-narrow/jumbotron-narrow.css";
+@import (inline) "../../node_modules/font-awesome/css/font-awesome.min.css";
+
+body {
+  padding-left: 84px;
+}
